# LostInTime

./: .gitignore  CHANGELOG.md  Cargo.toml  Info.plist  LICENSE.md  README.md  build_macos.sh  build_windows.bat  flake.nix  notes.md  text-layout.aseprite  txt.text
assets/: ColorTheme.aseprite  GameIcon_1024x1024.icns  GameIcon_128x128.icns  GameIcon_16x16.icns  GameIcon_256x256.icns  GameIcon_32x32.icns  GameIcon_512x512.icns  GameIcon_64x64.icns  MainMenu.aseprite  Sprite-0001-Recovered.aseprite  Test-ui-cube-Recovered.aseprite  Test-ui-cube.aseprite  era2-teaser.aseprite  sprites_desc.ron  tips.json
assets/effects/: DodgeChanceIcon_test.aseprite
assets/loot/: loot_tables.ron
assets/proto/: CombatShrine.prototype.ron  DungeonWorldGenerationParams.prototype.ron  Era1WorldGenerationParams.prototype.ron  Era2WorldGenerationParams.prototype.ron  Era3WorldGenerationParams.prototype.ron  WorldGenerationParams.prototype.ron  alchemytable.prototype.ron  alchemytableblock.prototype.ron  anvil.prototype.ron  anvilblock.prototype.ron  apple.prototype.ron  arc.prototype.ron  arrow.prototype.ron  bandage.prototype.ron  basicstaff.prototype.ron  bed.prototype.ron  bedblock.prototype.ron  berries.prototype.ron  berrybush.prototype.ron  bluecape.prototype.ron  bossshrine.prototype.ron  boulder.prototype.ron  boulder2.prototype.ron  bridge.prototype.ron  bridgeblock.prototype.ron  brownmushroom.prototype.ron  brownmushroomblock.prototype.ron  bush.prototype.ron  bush2.prototype.ron  bushling.prototype.ron  bushlingscale.prototype.ron  cattail.prototype.ron  cauldron.prototype.ron  cauldronblock.prototype.ron  chest.prototype.ron  chestblock.prototype.ron  chestplate.prototype.ron  claw.prototype.ron  coal.prototype.ron  coalboulder.prototype.ron  (+179 more)
assets/recipes/: recipes.ron
assets/scenes/: CombatShrine.scn.ron  DungeonEntrance.scn.ron  GambleShrine.scn.ron  house.scn.ron  test.scn.ron
assets/shaders/: enemy_attack.wgsl  screen_effect.wgsl  test_wind.wgsl  texture_map.wgsl  ui_texture.wgsl
assets/textures/: sprites.desc.ron  sprites_desc.ron
assets/textures/combat_shrine/: combat_shrine.ase
assets/textures/effects/: AttackWarning.aseprite  Combo.aseprite  Electricity.aseprite  IceExplosion.aseprite  IceFloor.aseprite  OnHitAoE.aseprite  RarityGlows.aseprite
assets/textures/fairy/: Fairy2.ase  fairy_2.ase
assets/textures/gamble_shrine/: GambleShrine.ase  gamble_shrine.ase  gamble_shrine2.ase
assets/textures/player/: new_player_back.aseprite  new_player_side.aseprite  player.aseprite  player_blue.aseprite  (+4 more)
assets/ui/: Clock.aseprite  CraftingInventory.aseprite  SkillChoiceFlash.aseprite
src/: animations.rs  assets.rs  attributes.rs  audio.rs  build.rs  change_tile.rs  collision.rs  colors.rs  combat.rs  container.rs  crafting.rs  custom_commands.rs  datafiles.rs  dimension.rs  game_camera.rs  icon.rc  inputs.rs  inventory.rs  item.rs  keybinds.rs  levels.rs  main.rs  mouse.rs  night.rs  panic_handler.rs  player.rs  sappling.rs  vectorize.rs  world_generation.rs
src/ai/: enemy_basic.rs  enemy_hostile_basic.rs  mod.rs  pathfinding.rs
src/animations/: enemy_sprites.rs  game_over.rs  mod.rs  player_sprite.rs  ui_animaitons.rs
src/assets/: asset_helpers.rs  mod.rs
src/attributes/: attribute_helpers.rs  health_regen.rs  hunger.rs  item_abilities.rs  mod.rs  modifiers.rs
src/client/: analytics.rs  mod.rs
src/combat/: collisions.rs  combat_helpers.rs  mod.rs  status_effects.rs
src/enemy/: fairy.rs  mod.rs  red_mushking.rs  red_mushling.rs  spawn_helpers.rs  spawner.rs
src/item/: boss_shrine.rs  combat_shrine.rs  crafting.rs  gamble_shrine.rs  item_actions.rs  item_upgrades.rs  loot_table.rs  melee.rs  mod.rs  object_actions.rs  projectile.rs
src/juice/: bounce.rs  cpu_particles.rs  mod.rs  particles.rs  screen_flash.rs  screen_shake.rs
src/player/: currency.rs  levels.rs  mage_skills.rs  melee_skills.rs  mod.rs  rogue_skills.rs  skills.rs  sprint.rs  stats.rs  teleport.rs
src/proto/: mod.rs  proto_param.rs
src/schematic/: loot_chests.rs  mod.rs  schematic_spawner.rs
src/ui/: chest_ui.rs  crafting_ui.rs  damage_numbers.rs  enemy_health_bar.rs  essence_ui.rs  fps_text.rs  furnace_ui.rs  guide_hud.rs  interactions.rs  inventory_slot_widget.rs  inventory_ui.rs  inventory_widget.rs  key_input_guide.rs  main_menu.rs  minimap.rs  mod.rs  player_hud.rs  scrapper_ui.rs  screen_effects.rs  skill_choice_ui.rs  stats_ui.rs  tile_hover.rs  tooltips.rs  ui_container_param.rs  ui_helpers.rs  ui_plugin.rs
src/world/: chunk.rs  dimension.rs  dungeon.rs  dungeon_generation.rs  generation.rs  mod.rs  noise_helpers.rs  portal.rs  tile.rs  wall_auto_tile.rs  world_helpers.rs  y_sort.rs
(+4 files in other folders)
