[package]
name = "survival-rogue-like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10.1"}
bevy_asset_loader = "0.16.0"
bevy_rapier2d = {git = "https://github.com/dimforge/bevy_rapier.git", branch = "master", features = ["simd-stable","parallel"]  }
bevy_ecs_tilemap = "0.10.0"
bevy_diagnostics_explorer = "0.1.0"
bevy-inspector-egui = "0.18"
bevy_proto = {version = "0.10.0", features = ["bevy_sprite", "ron", "bevy_render"]}
seldom_state = "0.6.3"
ron = "0.8.0"
serde = "1.0.136"
serde_with = "2.1.0"
rand = "0.8.5"
noise = "0.8.2"
bevy_save = { git = "https://github.com/hankjordan/bevy_save.git", branch = "master" }
bevy_pkv = "0.6"
serde_json = "1.0"
strum = "^0.15"
strum_macros = "^0.15"
interpolation = "0.2.0"
lazy_static = "1.4.0"

[features]
release-bundle = []

[target.x86_64-pc-windows-msvc]
linker = "/usr/local/bin/lld"
rustflags = [
  "-Lnative=/Users/ramin/xwin/crt/lib/x86_64",
  "-Lnative=/Users/ramin/xwin/sdk/lib/um/x86_64",
  "-Lnative=/Users/ramin/xwin/sdk/lib/ucrt/x86_64"
]