[package]
name = "survival-rogue-like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["wayland"] }
bevy_asset_loader = "0.16.0"
bevy_rapier2d = { version = "0.21.0", features = ["simd-stable", "parallel"] }
bevy_ecs_tilemap = "0.10.0"
bevy_diagnostics_explorer = "0.1.0"
bevy-inspector-egui = "0.18"
bevy_proto = { version = "0.10.0", features = [
    "bevy_sprite",
    "ron",
    "bevy_render",
] }
seldom_state = "0.6.3"
ron = "0.8.0"
serde = "1.0.136"
serde_with = "3.8.1"
rand = "0.8.5"
rand_xorshift = "^0.3"
itertools = "^0.8"
noise = "0.8.2"
bevy_save = "0.8"
bevy_pkv = "0.6"
serde_json = "1.0"
strum = "^0.15"
strum_macros = "^0.15"
interpolation = "0.2.0"
lazy_static = "1.4.0"
bevy_aseprite = "0.10"
rand_chacha = "0.3.1"
pathfinding = "4.10.0"
tungstenite = { version = "0.23.0", features = ['native-tls-vendored',] }
webbrowser = "1.0.1"
bevy_hanabi = { version = "0.6", default-features = false, features = ["2d"] }
chrono = "0.4.38"
openssl = { version = "0.10.66", features = ["vendored"] }
logs-wheel = "0.3.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
native-dialog = "0.7.0"
tracing-panic = "0.1.2"
bevy_embedded_assets = "0.7"

[features]
release-bundle = []
